--- a/teht2_6_2_11/puhelinluettelo/src/App.css
+++ b/teht2_6_2_11/puhelinluettelo/src/App.css
@@ -22,6 +22,16 @@
   font-size: large;
 }
 
+.success {
+  color: red;
+  background: lightgrey;
+  font-size: 20px;
+  border-style: solid;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 10px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
